--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,4 @@
+@import "compass";
 /***** CLEARFIX is applied to the parent of floated elements *************/
 /*************************************************************************/
 
@@ -14,19 +15,306 @@
 
 /***** SITE STYLES *************/
 /**********************************/
+body{
+    background: #fbf9f5;
+    font-family: "Ubuntu", sans-serif;
+    color: #002041;
+}
 
-header{
-	background-image: url("../img/heroimg.svg");
+h2, h3, h4{
+    font-family: "Rokkitt", serif;
+}
+
+ul{
+    padding: 0;
+}
+
+li{
+    list-style: none;
+}
+
+img{
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+    display: block;
+}
+
+.top{
+	background-image: url(../img/heroimg.jpg);
 	background-repeat: no-repeat;
-	background-size: fill;
+    background-position: center 20%;
+    background-size: cover;
+	width: 100%;
+    font-family: "Rokkitt", serif;
+    color: white;
+    text-align: center;
+}
+
+.logo{
+    width: 20%;
+    height: 20%;
+    margin: 0 auto;
+    display: block;
+}
+
+.register{
+    background: #f7941d;
+    color: white;
+    border: 5px solid white;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+    padding: 10px;    
+    display: block;
+    width: 20%;
+    margin: 0 auto;
+    transition: background 0.5s ease;
+
+    &:hover{
+      background: #7f4d10;
+    }
+}
+
+.discount{
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    text-decoration: line-through;
 }
 
 
+.p2{
+    background: #ffffff;
+}
+
+.maincontent{
+    width: 95%;
+    margin: 0 auto;
+}
+
+.firsth{
+    margin-top: 0;
+}
+
+.schedule ul{
+    p{
+        margin: 0;
+    }
+
+    li{
+        margin-bottom: 2%;
+    }
+}
+
+.wednesday{
+    border: 2px solid grey;
+    h4{
+        border-bottom: 2px solid grey;
+    }
+}
+
+.thursday{
+    border: 2px solid grey;
+    h4{
+        border-bottom: 2px solid grey;
+    }
+}
+
+.friday{
+    border: 2px solid grey;
+    h4{
+        border-bottom: 2px solid grey;
+    }
+}
+
+.lunch{
+    border-bottom: 2px solid grey;
+    border-top: 2px solid grey;
+    padding: 1%;
+}
+
+.sidebar{
+    background: #b8e2b9;
+    padding: 2%
+}
+
+.draplin{
+    height: 30%;
+    width: 30%;
+}
+
+.lukas{
+    height: 30%;
+    width: 30%;
+}
+
+.sponsors img{
+    margin: 0 auto;
+    height: 50%;
+    width: 50%;
+}
+.bottom p{
+    text-align: center;
+}
 
 
+.presentation{
+    background: white;
+    img{
+        height: 50%;
+        width: 50%;
+        margin: 0 auto;
+    }
+}
 
+.footerimg{
+    height: 25%;
+    width: 15%;
+    margin: 0 auto;
+}
 
+.presentation a{
+    display: block;
+    opacity: 1.0;
+    transition: opacity 0.5s;
 
+    &:hover{
+      opacity: 0.4;
+    }
+}
 
+.sponsors a{
+    display: block;
+    opacity: 1.0;
+    transition: opacity 0.5s;
+
+    &:hover{
+      opacity: 0.4;
+    }
+}
+
+.progress{
+    position:fixed;
+    top: 0;
+    background-color:#a6cca7;
+    opacity: 0.98;
+    width:100%;
+    height:50px;
+    z-index: 10000;
+
+    img{
+        height: 75%;
+        width: 75%;
+        // display: inline-block;
+        // float: left;
+        position: absolute;
+        left: -30%;
+    }
+
+    a{
+        // display: inline-block;
+        text-align: center;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (min-width: 660px){
+
+    .wrapper{
+        display: inline-block;
+        width: 45%;
+        vertical-align: top;
+        
+    }
+
+    .sidebar{
+        display: inline-block;
+        width: 45%;
+        vertical-align: top;
+        
+    }
+
+    .chimp{
+        float: left;
+        width: 49%;
+
+    }
+
+    .git{
+       float: left;
+       width: 49%; 
+
+    }
+
+    .shop{
+       float: right;
+       width: 49%; 
+
+    }
+
+    .girls{
+       float: right;
+       width: 49%;
+
+    }
+
+    .ums{
+        float: left;
+        width: 49%;
+        vertical-align: top;
+    }
+
+    .tiy{
+        float: right;
+        width: 49%;
+        vertical-align: top;
+    }
+
+    .footerimg{
+        width: 10%;
+    }
+
+}
+
+@media screen and (min-width: 1000px){
+    .wrapper{
+        width: 70%;
+        vertical-align: top;
+        display: inline-block;
+    }
+
+    .sidebar{
+        width: 20%;
+        vertical-align: top;
+        display: inline-block;
+        img{
+            width: 50%;
+        }
+    }
+
+    .presentation{
+        img{
+            width: 50%;
+            vertical-align: top;
+        }
+    }
+
+    .sponsors{
+        img{
+            display: inline-block;
+            width: 25%;
+            max-width: 330px;
+            vertical-align: top;
+        }
+    }
+
+    .footerimg{
+        width: 5%;
+        max-width: 120px;
+    }
+
+    
+}
 
 
