--- a/css/style.css
+++ b/css/style.css
@@ -21,24 +21,25 @@ body {
   background: #fbf9f5;
   font-family: "Ubuntu", sans-serif;
   color: #002041;
+  line-height: 1.5em;
 }
 
-/* line 24, ../scss/style.scss */
+/* line 25, ../scss/style.scss */
 h2, h3, h4 {
   font-family: "Rokkitt", serif;
 }
 
-/* line 28, ../scss/style.scss */
+/* line 29, ../scss/style.scss */
 ul {
   padding: 0;
 }
 
-/* line 32, ../scss/style.scss */
+/* line 33, ../scss/style.scss */
 li {
   list-style: none;
 }
 
-/* line 36, ../scss/style.scss */
+/* line 37, ../scss/style.scss */
 img {
   max-width: 100%;
   margin: 0;
@@ -46,7 +47,7 @@ img {
   display: block;
 }
 
-/* line 43, ../scss/style.scss */
+/* line 44, ../scss/style.scss */
 .top {
   background-image: url(../img/heroimg.jpg);
   background-repeat: no-repeat;
@@ -56,9 +57,13 @@ img {
   font-family: "Rokkitt", serif;
   color: white;
   text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  text-shadow: 1px 1px 0 #000000;
 }
 
-/* line 54, ../scss/style.scss */
+/* line 59, ../scss/style.scss */
 .logo {
   width: 20%;
   height: 20%;
@@ -66,7 +71,7 @@ img {
   display: block;
 }
 
-/* line 61, ../scss/style.scss */
+/* line 67, ../scss/style.scss */
 .register {
   background: #f7941d;
   color: white;
@@ -74,18 +79,37 @@ img {
   border-radius: 5px;
   text-align: center;
   text-decoration: none;
-  padding: 10px;
-  display: block;
-  width: 20%;
+  padding: 5px;
+  width: 50px;
   margin: 0 auto;
   transition: background 0.5s ease;
+  font-size: small;
 }
-/* line 74, ../scss/style.scss */
+/* line 81, ../scss/style.scss */
 .register:hover {
   background: #7f4d10;
 }
 
-/* line 79, ../scss/style.scss */
+/* line 86, ../scss/style.scss */
+.registerone {
+  background: #f7941d;
+  color: white;
+  border: 5px solid white;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  padding: 15px;
+  display: block;
+  width: 50px;
+  margin: 0 auto;
+  transition: background 0.5s ease;
+}
+/* line 100, ../scss/style.scss */
+.registerone:hover {
+  background: #7f4d10;
+}
+
+/* line 105, ../scss/style.scss */
 .discount {
   display: inline-block;
   margin: 0;
@@ -93,250 +117,310 @@ img {
   text-decoration: line-through;
 }
 
-/* line 87, ../scss/style.scss */
+/* line 113, ../scss/style.scss */
 .p2 {
   background: #ffffff;
+  padding: 2%;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
-/* line 91, ../scss/style.scss */
+/* line 119, ../scss/style.scss */
 .maincontent {
   width: 95%;
   margin: 0 auto;
 }
 
-/* line 96, ../scss/style.scss */
+/* line 124, ../scss/style.scss */
 .firsth {
   margin-top: 0;
 }
 
-/* line 101, ../scss/style.scss */
+/* line 128, ../scss/style.scss */
+.schedule {
+  padding-bottom: 2%;
+  width: 95%;
+  margin: 0 auto;
+}
+/* line 133, ../scss/style.scss */
 .schedule ul p {
   margin: 0;
 }
-/* line 105, ../scss/style.scss */
+/* line 137, ../scss/style.scss */
 .schedule ul li {
   margin-bottom: 2%;
+  padding: 2%;
+  display: inline-block;
 }
 
-/* line 110, ../scss/style.scss */
+/* line 145, ../scss/style.scss */
+.schedule_table {
+  width: 95%;
+  margin: 0 auto;
+}
+
+/* line 151, ../scss/style.scss */
+.hashtag {
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+/* line 156, ../scss/style.scss */
 .wednesday {
-  border: 2px solid grey;
+  border: 2px solid #b2b2b2;
+  border-bottom: none;
+  padding: 2%;
 }
-/* line 112, ../scss/style.scss */
-.wednesday h4 {
-  border-bottom: 2px solid grey;
+/* line 160, ../scss/style.scss */
+.wednesday h3 {
+  border-bottom: 2px solid #b2b2b2;
 }
 
-/* line 117, ../scss/style.scss */
+/* line 165, ../scss/style.scss */
 .thursday {
-  border: 2px solid grey;
+  border: 2px solid #b2b2b2;
+  border-bottom: none;
+  padding: 2%;
 }
-/* line 119, ../scss/style.scss */
-.thursday h4 {
-  border-bottom: 2px solid grey;
+/* line 169, ../scss/style.scss */
+.thursday h3 {
+  border-bottom: 2px solid #b2b2b2;
 }
 
-/* line 124, ../scss/style.scss */
+/* line 174, ../scss/style.scss */
 .friday {
-  border: 2px solid grey;
+  border: 2px solid #b2b2b2;
+  padding: 2%;
 }
-/* line 126, ../scss/style.scss */
-.friday h4 {
-  border-bottom: 2px solid grey;
+/* line 177, ../scss/style.scss */
+.friday h3 {
+  border-bottom: 2px solid #b2b2b2;
 }
 
-/* line 131, ../scss/style.scss */
+/* line 183, ../scss/style.scss */
 .lunch {
-  border-bottom: 2px solid grey;
-  border-top: 2px solid grey;
+  border-bottom: 2px solid #b2b2b2;
+  border-top: 2px solid #b2b2b2;
   padding: 1%;
+  background: #a6cca7;
 }
 
-/* line 137, ../scss/style.scss */
+/* line 190, ../scss/style.scss */
 .sidebar {
   background: #b8e2b9;
   padding: 2%;
 }
+/* line 194, ../scss/style.scss */
+.sidebar h4, .sidebar h3 {
+  margin: 0;
+}
 
-/* line 142, ../scss/style.scss */
-.draplin {
+/* line 200, ../scss/style.scss */
+.draplin img {
   height: 30%;
   width: 30%;
 }
 
-/* line 147, ../scss/style.scss */
-.lukas {
+/* line 207, ../scss/style.scss */
+.lukas img {
   height: 30%;
   width: 30%;
 }
 
-/* line 152, ../scss/style.scss */
-.sponsors img {
-  margin: 0 auto;
-  height: 50%;
-  width: 50%;
-}
-
-/* line 157, ../scss/style.scss */
+/* line 225, ../scss/style.scss */
 .bottom p {
   text-align: center;
 }
 
-/* line 162, ../scss/style.scss */
+/* line 230, ../scss/style.scss */
 .presentation {
   background: white;
+  padding-bottom: 2%;
+  padding-left: 2%;
+  width: 95%;
+  margin: 0 auto;
 }
-/* line 164, ../scss/style.scss */
+/* line 236, ../scss/style.scss */
 .presentation img {
-  height: 50%;
   width: 50%;
   margin: 0 auto;
 }
 
-/* line 171, ../scss/style.scss */
+/* line 242, ../scss/style.scss */
 .footerimg {
   height: 25%;
   width: 15%;
   margin: 0 auto;
+  padding-top: 2%;
 }
 
-/* line 177, ../scss/style.scss */
+/* line 249, ../scss/style.scss */
 .presentation a {
-  display: block;
+  display: inline-block;
   opacity: 1.0;
   transition: opacity 0.5s;
+  width: 45%;
 }
-/* line 182, ../scss/style.scss */
+/* line 255, ../scss/style.scss */
 .presentation a:hover {
   opacity: 0.4;
 }
 
-/* line 187, ../scss/style.scss */
-.sponsors a {
-  display: block;
-  opacity: 1.0;
-  transition: opacity 0.5s;
-}
-/* line 192, ../scss/style.scss */
-.sponsors a:hover {
-  opacity: 0.4;
-}
-
-/* line 197, ../scss/style.scss */
+/* line 261, ../scss/style.scss */
 .progress {
   position: fixed;
   top: 0;
-  background-color: #a6cca7;
-  opacity: 0.98;
+  background-color: #b2b2b2;
+  opacity: 0.9;
   width: 100%;
   height: 50px;
   z-index: 10000;
 }
-/* line 206, ../scss/style.scss */
+/* line 270, ../scss/style.scss */
 .progress img {
   height: 75%;
   width: 75%;
   position: absolute;
   left: -30%;
+  padding-top: 1%;
 }
-/* line 215, ../scss/style.scss */
-.progress a {
-  text-align: center;
+
+/* line 283, ../scss/style.scss */
+.sponsors {
+  width: 95%;
+  padding: 2%;
   margin: 0 auto;
+}
+/* line 287, ../scss/style.scss */
+.sponsors img {
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  background: #ffffff;
+  width: 35%;
+  height: 35%;
+  padding: 20px;
+  display: inline-block;
+}
+/* line 296, ../scss/style.scss */
+.sponsors a {
+  display: inline-block;
+  opacity: 1.0;
+  transition: opacity 0.5s;
+}
+/* line 301, ../scss/style.scss */
+.sponsors a:hover {
+  opacity: 0.4;
+}
+
+/* line 306, ../scss/style.scss */
+.draplin {
+  display: inline-block;
+  width: 45%;
+  vertical-align: top;
+  margin: 0 auto;
+  padding: 2%;
+}
+
+/* line 315, ../scss/style.scss */
+.lukas {
+  display: inline-block;
+  width: 45%;
+  vertical-align: top;
+  margin: 0 auto;
+  padding: 2%;
+}
+
+/* line 324, ../scss/style.scss */
+.sidebar {
+  padding: 2%;
+  margin: 0 auto;
+}
+/* line 327, ../scss/style.scss */
+.sidebar h4 {
+  margin: 0;
+}
+
+/* line 332, ../scss/style.scss */
+.nav-collapse {
+  text-align: center;
+}
+/* line 334, ../scss/style.scss */
+.nav-collapse a {
+  color: #ffffff;
+  text-decoration: none;
+}
+/* line 338, ../scss/style.scss */
+.nav-collapse li {
+  display: inline-block;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 @media screen and (min-width: 660px) {
-  /* line 224, ../scss/style.scss */
+  /* line 348, ../scss/style.scss */
   .wrapper {
     display: inline-block;
-    width: 45%;
-    vertical-align: top;
   }
 
-  /* line 231, ../scss/style.scss */
+  /* line 352, ../scss/style.scss */
   .sidebar {
+    padding: 2%;
     display: inline-block;
-    width: 45%;
-    vertical-align: top;
+  }
+  /* line 355, ../scss/style.scss */
+  .sidebar h4 {
+    margin: 0;
   }
 
-  /* line 238, ../scss/style.scss */
-  .chimp {
-    float: left;
-    width: 49%;
-  }
-
-  /* line 244, ../scss/style.scss */
-  .git {
-    float: left;
-    width: 49%;
-  }
-
-  /* line 250, ../scss/style.scss */
-  .shop {
-    float: right;
-    width: 49%;
-  }
-
-  /* line 256, ../scss/style.scss */
-  .girls {
-    float: right;
-    width: 49%;
-  }
-
-  /* line 262, ../scss/style.scss */
+  /* line 397, ../scss/style.scss */
   .ums {
-    float: left;
-    width: 49%;
-    vertical-align: top;
+    display: inline-block;
+    vertical-align: middle;
+    padding-top: 35px;
   }
 
-  /* line 268, ../scss/style.scss */
+  /* line 403, ../scss/style.scss */
   .tiy {
-    float: right;
-    width: 49%;
-    vertical-align: top;
+    display: inline-block;
+    vertical-align: middle;
   }
 
-  /* line 274, ../scss/style.scss */
+  /* line 408, ../scss/style.scss */
   .footerimg {
     width: 10%;
   }
 }
 @media screen and (min-width: 1000px) {
-  /* line 281, ../scss/style.scss */
+  /* line 418, ../scss/style.scss */
   .wrapper {
-    width: 70%;
-    vertical-align: top;
     display: inline-block;
   }
 
-  /* line 287, ../scss/style.scss */
+  /* line 422, ../scss/style.scss */
   .sidebar {
-    width: 20%;
-    vertical-align: top;
+    padding: 2%;
     display: inline-block;
   }
-  /* line 291, ../scss/style.scss */
+  /* line 425, ../scss/style.scss */
   .sidebar img {
     width: 50%;
   }
+  /* line 428, ../scss/style.scss */
+  .sidebar h4 {
+    margin: 0;
+  }
 
-  /* line 297, ../scss/style.scss */
+  /* line 433, ../scss/style.scss */
+  .presentation {
+    width: 95%;
+    margin: 0 auto;
+    padding-left: 2%;
+  }
+  /* line 438, ../scss/style.scss */
   .presentation img {
-    width: 50%;
-    vertical-align: top;
+    display: block;
+    vertical-align: middle;
   }
 
-  /* line 304, ../scss/style.scss */
-  .sponsors img {
-    display: inline-block;
-    width: 25%;
-    max-width: 330px;
-    vertical-align: top;
-  }
-
-  /* line 312, ../scss/style.scss */
+  /* line 455, ../scss/style.scss */
   .footerimg {
     width: 5%;
     max-width: 120px;
