--- a/scss/style.scss
+++ b/scss/style.scss
@@ -159,6 +159,7 @@ img{
     padding: 2%;
     h3{
         border-bottom: 2px solid #b2b2b2;
+        background: #b8e2b9;
     }
 }
 
@@ -168,6 +169,7 @@ img{
     padding: 2%;
     h3{
         border-bottom: 2px solid #b2b2b2;
+        background: #b8e2b9;
     }
 }
 
@@ -176,6 +178,7 @@ img{
     padding: 2%;
     h3{
         border-bottom: 2px solid #b2b2b2;
+        background: #b8e2b9;
 
     }
 }
@@ -237,16 +240,7 @@ img{
         width: 50%;
         margin: 0 auto;
     }
-}
-
-.footerimg{
-    height: 25%;
-    width: 15%;
-    margin: 0 auto;
-    padding-top: 2%;
-}
-
-.presentation a{
+    a{
     display: inline-block;
     opacity: 1.0;
     transition: opacity 0.5s;
@@ -256,6 +250,16 @@ img{
       opacity: 0.4;
     }
 }
+}
+
+.footerimg{
+    height: 25%;
+    width: 15%;
+    margin: 0 auto;
+    padding-top: 2%;
+}
+
+
 
 
 .progress{
@@ -287,8 +291,8 @@ img{
     img{
         box-shadow:0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
         background: #ffffff;
-        width: 35%;
-        height: 35%;
+        width: 45%;
+        height: 45%;
         padding:20px;
         display: inline-block;
     }
@@ -297,6 +301,8 @@ img{
     display: inline-block;
     opacity: 1.0;
     transition: opacity 0.5s;
+    width: 45%;
+    height: 45%;
 
     &:hover{
       opacity: 0.4;
@@ -337,8 +343,10 @@ img{
         }
         li{
             display: inline-block;
-            padding-left: 5%;
-            padding-right: 5%;
+            padding-left: 1%;
+            padding-right: 1%;
+            width: 20%;
+            font-size: 10pt;
         }
     }
 
@@ -436,7 +444,6 @@ img{
         padding-left: 2%;
         
         img{
-            
             display: block;
             vertical-align: middle;
         }
