--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,7 +67,6 @@ img{
 .register{
     background: #f7941d;
     color: white;
-    border: 5px solid white;
     border-radius: 5px;
     text-align: center;
     text-decoration: none;
@@ -75,7 +74,7 @@ img{
     width: 50px;
     margin: 0 auto;
     transition: background 0.5s ease;
-    font-size: small;
+    font-size: 10pt;
     
 
     &:hover{
@@ -92,7 +91,7 @@ img{
     text-decoration: none;
     padding: 15px;    
     display: block;
-    width: 50px;
+    width: 100px;
     margin: 0 auto;
     transition: background 0.5s ease;
     
@@ -138,6 +137,7 @@ img{
             margin-bottom: 2%;
             padding: 2%;
             display: inline-block;
+            width: 40%;
         }
     }
 }
@@ -145,6 +145,7 @@ img{
 .schedule_table{
     width: 95%;
     margin: 0 auto;
+    background: #a6cca7;
 
 }
 
@@ -159,7 +160,6 @@ img{
     padding: 2%;
     h3{
         border-bottom: 2px solid #b2b2b2;
-        background: #b8e2b9;
     }
 }
 
@@ -169,7 +169,7 @@ img{
     padding: 2%;
     h3{
         border-bottom: 2px solid #b2b2b2;
-        background: #b8e2b9;
+
     }
 }
 
@@ -178,7 +178,7 @@ img{
     padding: 2%;
     h3{
         border-bottom: 2px solid #b2b2b2;
-        background: #b8e2b9;
+
 
     }
 }
@@ -187,7 +187,7 @@ img{
     border-bottom: 2px solid #b2b2b2;
     border-top: 2px solid #b2b2b2;
     padding: 1%;
-    background: #a6cca7;
+
 }
 
 .sidebar{
@@ -213,18 +213,7 @@ img{
     }
 }   
 
-// .sponsors {
 
-//     padding-bottom: 2%;
-//     width: 95%;
-//     margin: 0 auto;
-
-//     img{
-//         margin: 0 auto;
-//         height: 50%;
-//         width: 50%;
-//     }   
-// }
 .bottom p{
     text-align: center;
 }
@@ -237,19 +226,23 @@ img{
     width: 95%;
     margin: 0 auto;
     img{
-        width: 50%;
+        width: 95%;
         margin: 0 auto;
     }
     a{
     display: inline-block;
     opacity: 1.0;
     transition: opacity 0.5s;
-    width: 45%;
+    width: 95%;
 
     &:hover{
       opacity: 0.4;
     }
+
 }
+    &.ums{
+        height: 50%;
+    }
 }
 
 .footerimg{
@@ -264,11 +257,11 @@ img{
 
 .progress{
     position:fixed;
-    top: 0;
-    background-color:#b2b2b2;
+    top: 50px;
+    margin-top: 4%;
     opacity: 0.9;
     width:100%;
-    height:50px;
+    height:5px;
     z-index: 10000;
 
     img{
@@ -288,26 +281,35 @@ img{
     width: 95%;
     padding: 2%;
     margin: 0 auto;
-    img{
-        box-shadow:0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-        background: #ffffff;
-        width: 45%;
-        height: 45%;
-        padding:20px;
-        display: inline-block;
-    }
 
     a{
-    display: inline-block;
-    opacity: 1.0;
-    transition: opacity 0.5s;
-    width: 45%;
-    height: 45%;
+        display: inline-block;
+        background: #ffffff;
+        opacity: 1.0;
+        transition: opacity 0.5s;
+        width: 95%;
+        height: 150px;
+        padding: 2%;
+        box-shadow:0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+        margin: 0.2%;
+        vertical-align: middle;
 
-    &:hover{
-      opacity: 0.4;
+        &:hover{
+          opacity: 0.4;
+        }
     }
-    }   
+    
+    img{
+        width: 80%;
+        margin: 0 auto;
+        display: block;
+        vertical-align: middle;
+
+        &.girls{
+            width: 30%;
+            margin: 0 auto;
+        }
+    }
 }
     .draplin{
         display: inline-block;
@@ -337,6 +339,12 @@ img{
 
     .nav-collapse{
         text-align: center;
+        background: #002041;
+        height: 50px;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        padding-bottom: 4%;
         a{
             color: #ffffff;
             text-decoration: none;
@@ -345,8 +353,13 @@ img{
             display: inline-block;
             padding-left: 1%;
             padding-right: 1%;
-            width: 20%;
+            width: 15%;
             font-size: 10pt;
+            margin: 0 auto;
+            vertical-align: middle;
+        }
+        img{
+            height: 50px;
         }
     }
 
@@ -365,58 +378,86 @@ img{
         }
     }
 
-    // .chimp{
-    //     float: left;
-    //     width: 40%;
-    //     // background-color: #ffffff;
-    //     margin: 2%;
+.sponsors{
+    width: 95%;
+    padding: 2%;
+    margin: 0 auto;
 
-
-
-    // }
-
-    // .git{
-    //    float: left;
-    //    width: 40%; 
-    //    // background-color: #ffffff;
-    //    margin: 2%;
-
-
-    // }
-
-    // .shop{
-    //    float: right;
-    //    width: 40%; 
-    //    // background-color: #ffffff;
-    //    margin: 2%;
-
-
-    // }
-
-    // .girls{
-    //    float: right;
-    //    width: 40%;
-    //    // background-color: #ffffff;
-    //    margin: 2%;
-
-
-    // }
-
-    .ums{
+    a{
         display: inline-block;
+        background: #ffffff;
+        opacity: 1.0;
+        transition: opacity 0.5s;
+        width: 45%;
+        height: 150px;
+        padding: 2%;
+        box-shadow:0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+        margin: 0.2%;
         vertical-align: middle;
-        padding-top: 35px;
+
+        &:hover{
+          opacity: 0.4;
+        }
+    }
+    
+    img{
+        width: 65%;
+        margin: 0 auto;
+        display: block;
+        vertical-align: middle;
+
+        &.girls{
+            width: 30%;
+        }
+
+        &.chimp{
+            padding-top: 6%;
+        }
+    }
+}
+
+    .presentation{
+    background: white;
+    padding-bottom: 2%;
+    padding-left: 2%;
+    width: 95%;
+    margin: 0 auto;
+    img{
+        width: 45%;
+        margin: 0 auto;
+    }
+    a{
+    display: inline-block;
+    opacity: 1.0;
+    transition: opacity 0.5s;
+    width: 45%;
+    vertical-align: middle;
+    margin: 0 auto;
+
+    &:hover{
+      opacity: 0.4;
     }
 
-    .tiy{
-        display: inline-block;
-        vertical-align: middle;
+}
+    &.ums{
+        height: 50%;
     }
-
+}
     .footerimg{
         width: 10%;
     }
 
+    .nav-collapse{
+        li{
+            font-size: 14pt;
+            vertical-align: middle;
+        }
+        a{
+            font-size: 14pt;
+        }
+    }
+
+   
     
 
 
@@ -449,15 +490,7 @@ img{
         }
     }
 
-    // .sponsors{
 
-    //     img{
-    //         display: inline-block;
-    //         width: 25%;
-    //         max-width: 330px;
-    //         vertical-align: top;
-    //     }
-    // }
 
     .footerimg{
         width: 5%;
